feat: quelques fixs

--- a/programme/distraction.html
+++ b/programme/distraction.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css">
-    <title>s'informer</title>
+    <link rel="stylesheet" href="style.css">
+    <title>distraction</title>
 </head>
-<body class="respiration">
+<body class="distraction">
     <a href="indexangoisses.html">
         <button class="maison"><img src="bouton-home.png" alt="bouton home" width="15%" height="20%"></button>
      </a>
-    
-     <div class="cercle"></div>
-     <script src="script.js"></script>
-</body>
-</html>
+     <h1 class="mot"></h1>
