--- a/programme/respiration.html
+++ b/programme/respiration.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css">
-    <title>distraction</title>
+    <link rel="stylesheet" href="style.css">
+    <title>s'informer</title>
 </head>
-<body class="distraction">
+<body class="respiration">
     <a href="indexangoisses.html">
         <button class="maison"><img src="bouton-home.png" alt="bouton home" width="15%" height="20%"></button>
      </a>
-     <h1 class="mot"></h1>
+    
+     <div class="cercle"></div>
+     <script src="script.js"></script>
+</body>
+</html>
