--- a/programme/indexangoisses.html
+++ b/programme/indexangoisses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sos angoisses</title>
-    <link rel="stylesheet" href="css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="grand-titre">sos angoisses</h1>
