utilise index.html

--- a/programme/respiration.html
+++ b/programme/respiration.html
@@ -7,7 +7,7 @@
     <title>s'informer</title>
 </head>
 <body class="respiration">
-    <a href="indexangoisses.html">
+    <a href="index.html">
         <button class="maison"><img src="bouton-home.png" alt="bouton home" width="15%" height="20%"></button>
      </a>
     
