--- a/programme/crise.html
+++ b/programme/crise.html
@@ -18,7 +18,7 @@
          <a href="respiration.html">
             <button class="bouton-crise">Je suis prêt(e)</button>
          </a>
-         <a href="indexangoisses.html">
+         <a href="index.html">
             <button class="maison"><img src="bouton-home.png" alt="bouton home" width="15%" height="20%"></button>
         </a>
 
