--- a/programme/distraction.html
+++ b/programme/distraction.html
@@ -7,7 +7,7 @@
     <title>distraction</title>
 </head>
 <body class="distraction">
-    <a href="indexangoisses.html">
+    <a href="index.html">
         <button class="maison"><img src="bouton-home.png" alt="bouton home" width="15%" height="20%"></button>
      </a>
      <h1 class="mot"></h1>
