--- a/programme/s'informer.html
+++ b/programme/s'informer.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1 class="haut">s'informer</h1>
-<a href="indexangoisses.html">
+<a href="index.html">
 <button class="maison"><img src="bouton-home.png" alt="bouton home" width="15%" height="20%"></button>
 </a>
  
